# SimperStudio

./: .gitignore  BUILD_QUICK_START.md  CLAUDE.md  LICENSE  PACKAGING.md  README.md  README.zh-CN.md  SimperStudio_多角色综合评审报告.docx  SimperStudio_多角色综合评审报告_修复版.docx  TODO.md  build.bat  build.js  eslint.config.js  fix_appstore.ts  fix_appstore_agent.js  fix_apptsx.js  fix_dropdown.js  fix_sidebar_agent.js  fix_ts.js  fix_workflow_nodes.js  index.html  package-lock.json  package.json  tailwind.config.js  test-router.js  test-werewolf-data.json  tsconfig.json  ui-prototype.html  update_app.patch  update_app_store.patch  update_sidebar.patch  update_workflow_canvas.patch  vite.config.ts  礼物推荐助手.workflow.json
.claude/: launch.json  settings.local.json
.github/: pull_request_template.md
.playwright-mcp/: page-2026-05-27T06-25-14-485Z.yml  page-2026-05-27T06-25-37-151Z.yml  page-2026-05-27T06-25-49-317Z.yml  page-2026-05-27T06-25-54-403Z.yml  page-2026-05-27T06-31-17-145Z.yml  page-2026-05-27T06-35-12-752Z.yml  page-2026-05-27T06-35-25-364Z.yml  page-2026-05-27T06-36-27-712Z.yml  page-2026-05-27T06-36-41-271Z.yml  page-2026-05-27T06-36-54-884Z.yml  page-2026-05-27T06-38-28-474Z.yml  page-2026-05-27T06-44-02-465Z.yml  page-2026-05-27T06-44-18-139Z.yml  page-2026-05-27T07-40-10-751Z.yml  page-2026-05-27T07-40-19-885Z.yml  page-2026-05-27T07-40-53-468Z.yml  page-2026-05-27T07-41-02-587Z.yml  page-2026-05-27T07-47-42-319Z.yml  (+28 more)
docs/: CHANGELOG.md  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_agent.rs  db.rs  lib.rs  main.rs
(+196 files in other folders)
