[package]
name = "simperstudio"
version = "0.5.4"
description = "A Tauri App"
authors = ["SimperStudio Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/simperstudio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simperstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4"] }
dirs = "~5.0"
tokio = { version = "1", features = ["process", "sync", "io-util", "time"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = "0.4.31"
parking_lot = "0.12"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "~0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

